@@ -258,8 +258,7 @@ A:link, A:visited, A:active { text-decoration: underline }
 							$t,$m,$d,$w,$u);
 			    } else {
 				$id = strtoupper($name);
-//				$m = strtolower($module);
-//				$url = "html/libxml-$m.html#$id";
+				$m = strtolower($module);
 				$url = "html/libxml-$module.html#$id";
 				$results[$name] = array($relevance,$type,
 						$module, $desc, $name, $url);
@@ -285,7 +284,7 @@ A:link, A:visited, A:active { text-decoration: underline }
 			    } else {
 				$id = strtoupper($name);
 				$m = strtolower($module);
-				$url = "XSLT/html/libxslt-$m.html#$id";
+				$url = "XSLT/html/libxslt-$module.html#$id";
 				$results[$name] = array($relevance,$type,
 						$module, $desc, $name, $url);
 			    }
