@@ -3,21 +3,16 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html">
-  <style type="text/css">
+  <style type="text/css"></style>
 <!--
 TD {font-family: Verdana,Arial,Helvetica}
 BODY {font-family: Verdana,Arial,Helvetica; margin-top: 2em; margin-left: 0em; margin-right: 0em}
 H1 {font-family: Verdana,Arial,Helvetica}
 H2 {font-family: Verdana,Arial,Helvetica}
 H3 {font-family: Verdana,Arial,Helvetica}
-A:link, A:visited, A:active { text-decoration: underline }-->
-
-
-
-
-
-
+A:link, A:visited, A:active { text-decoration: underline }
   </style>
+-->
   <title>Libxml2 XmlTextReader Interface tutorial</title>
 </head>
 
