@@ -1,3 +1,10 @@
+Mon Sep  1 15:15:18 PDT 2003 William Brack <wbrack@mmm.com.hk>
+
+	* doc/index.py: fixed problem parsing xhtml docs
+	* doc/xmlreader.html,doc/guidelines.html: small modification
+	  to avoid problem in python parsing.
+	* doc/search.php: fixed upper case filename problem for XSLT docs
+
 Mon Sep  1 22:55:09 CEST 2003 Daniel Veillard <daniel@veillard.com>
 
 	* xinclude.c: patch from Mark Vakoc that allows compiling 
